@@ -202,6 +202,7 @@ Options:
 -logger &lt;classname&gt;    the class which is to perform logging
 -listener &lt;classname&gt;  add an instance of class as a project listener
 -buildfile &lt;file&gt;      use given buildfile
+-find &lt;file&gt;           search for buildfile towards the root of the filesystem and use it
 -D&lt;property&gt;=&lt;value&gt;   use value for given property</pre>
 <h3>Examples</h3>
 <blockquote>
